@@ -1,3 +1,9 @@
+2005-02-23  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b14
+
+	* Change: stats link descriptions
+
+	* Fix: phpBB modules.php was relying on globals that didn't exist
+
 2005-02-21  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b13
 
 	* Change: Texts in setup/config_data.inc
